@@ -3,6 +3,8 @@
     - [GH-74] Fixed documentation error saying that stroke_color and fill_color
       can be chained.
 
+    - Add class method standard_fonts() to PDF::API2::Resource::Font::CoreFont
+      to return the list of the 14 standard fonts.
 
 2.045     2023-09-25
 
